--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,8 @@
-$primary-color: #444;
-$secondary-color: #FEC260;
+$primary-color: #2C2E43;
+$secondary-color: #FFD523;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+$background-opacity: 0.7;
 
 @mixin easeOut {
   transition: all 0.7s ease-out;
